src/objects/Per_User_Credentials__c.object
<CustomObject>
    <fields>
        <fullName>Old_Password__c</fullName>
        <description>Used to Store Old Password</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Old Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>User Name</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Per_User_Credentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Per User Credential</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Per User Credential Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Per User Credentials</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>